--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jul  6 13:15:59 1995  Simon Leinen  <simon@lia.di.epfl.ch>
+
+	* test.pl, wwwtest, SNMP_Session.pm:
+	Use accessor methods for slots of SNMP_Session.
+
 Thu Jul  6 12:57:37 1995  Simon Leinen  <simon@lia.di.epfl.ch>
 
 	* test.pl (%ugly_oids): use qw() to define them, as in wwwtest.
