--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,28 @@
+Wed Jul 10 08:09:46 1996  Simon Leinen  <simon@instrumatic.ch>
+
+	* walk-test.pl: Accept hostname and community as command-line
+ 	arguments.  These default to ``neon-tetra'' and ``public'',
+ 	respectively.
+
+	* SNMP_Session.pm: New header comment.
+
+Wed Jul 10 08:06:11 1996  Tobias Oetiker  <oetiker@ee.ethz.ch>
+
+	Changed default timeout from 2 to 10 seconds.
+
+Wed Jul 10 08:06:11 1996  Heine Peters  <peters@dkrz.de>
+
+	Allow remote host to be specified as IP address in dotted-quad
+	notation rather than by name (integrated change dated April 25).
+
+	No longer bind the UDP socket to a specific address.
+
+Tue Jul  9 09:40:28 1996  Simon Leinen  <simon@instrumatic.ch>
+
+	* README: Added list of contributors.
+
+	Added pointer to mrtg 2.0.
+
 Tue Jul  9 08:41:22 1996  Simon Leinen  <simon@instrumatic.ch>
 
 	* BER.pm (decode_intlike): Fixed shifting of first byte.
