--- a/trunk/README
+++ b/trunk/README
@@ -3,9 +3,10 @@
 
 	     Author: Simon Leinen  <simon@instrumatic.ch>
 			    Contributors:
-		 Tobias Oetiker <oetiker@ee.ethz.ch>
-		  Andrzej Tobola <san@iem.pw.edu.pl>
-		      Dave Rand <dlr@Bungi.com>
+		 Tobias Oetiker  <oetiker@ee.ethz.ch>
+		 Andrzej Tobola  <san@iem.pw.edu.pl>
+		      Dave Rand  <dlr@Bungi.com>
+		    Heine Peters  <peters@dkrz.de>
 
 This archive contains Perl 5 modules SNMP_Session.pm and BER.pm,
 which, when used together, provide rudimentary access to remote SNMP
