--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-Wed Jul 10 08:09:46 1996  Simon Leinen  <simon@instrumatic.ch>
+Wed Jul 10 08:18:16 1996  Simon Leinen  <simon@instrumatic.ch>
+
+	* README: Added Heine Peters to contributors list.
 
 	* walk-test.pl: Accept hostname and community as command-line
  	arguments.  These default to ``neon-tetra'' and ``public'',
