--- a/README
+++ b/README
@@ -26,9 +26,8 @@ or generate SNMP traps using these routines.  Hopefully I will get
 around to implementing these other operations one day.
 
 For an excellent example of the type of application this is useful
-for, see version 2.0 (currently in beta) of Tobias Oetiker's ``mrtg''
-(Multi Router Traffic Grapher) tool:
-<URL:http://www.ee.ethz.ch/~oetiker/webtools/mrtg/mrtg.html>
+for, see Tobias Oetiker's ``mrtg'' (Multi Router Traffic Grapher)
+tool: <URL:http://www.ee.ethz.ch/~oetiker/webtools/mrtg/mrtg.html>
 
 				Usage
 				.....
@@ -43,7 +42,7 @@ The basic usage of these routines works like this:
 	# which you want to talk to the agent.	Set port to the UDP
 	# port on which the agent listens (usually 161).
 
-	$session = SNMP_Session::open ($host, $community, $port);
+	$session = SNMP_Session->open ($host, $community, $port);
 
 	# Set $oid1, $oid2... to the BER-encoded OIDs of the MIB
 	# variables you want to get.
