--- a/README
+++ b/README
@@ -4,9 +4,10 @@
 	       Author: Simon Leinen  <simon@switch.ch>
 			    Contributors:
 		 Tobias Oetiker  <oetiker@ee.ethz.ch>
+	       Matthew Trunnell  <matter@dune.media.mit.edu>
 		 Andrzej Tobola  <san@iem.pw.edu.pl>
 		      Dave Rand  <dlr@Bungi.com>
-		    Heine Peters  <peters@dkrz.de>
+		   Heine Peters  <peters@dkrz.de>
 		      Yufang HU  <yhu@casc.com>
 	       Philippe Simonet  <sip00@vg.swissptt.ch>
 
@@ -22,10 +23,10 @@ package such as CMU SNMP.  It is also written entirely in Perl, so you
 don't have to compile any C modules.  It uses the Perl 5 Socket.pm
 module and should therefore be very portable, even to non-Unix systems.
 
-The SNMP operations currently supported are "get" and "get-next".
-That means that you can neither set variables in an agent, nor receive
-or generate SNMP traps using these routines.  Hopefully I will get
-around to implementing these other operations one day.
+The SNMP operations currently supported are "get", "get-next", and
+"set".  That means that you cannot receive or generate SNMP traps
+using these routines.  Hopefully I will get around to implementing
+these other operations one day.
 
 For an excellent example of the type of application this is useful
 for, see Tobias Oetiker's ``mrtg'' (Multi Router Traffic Grapher)
@@ -92,6 +93,15 @@ function.  The hash %pretty_oids in the example contains a mapping
 from BER-encoded OIDs to "readable" instance names.  Look at the
 source of the real example programs to see how this is constructed.
 
+			     Set Requests
+			     ............
+
+Set requests are generated much like get or getNext requests are, with
+the exception that you have to specify not just OIDs, but also the
+values the variables should be set to.  Every binding is passed as a
+reference to a two-element array, the first element being the encoded
+OID and the second one the encoded value.
+
 			     Future Plans
 			     ............
 
@@ -116,9 +126,10 @@ don't have any agent implementation I could test my code against.
 
 			   More Operations
 
-Adding the set operation should not be very difficult.  Support for
-receiving and/or sending traps would be useful for some management
-applications.
+Support for receiving traps would be useful for some management
+applications.  There may even be use for sending traps, but I cannot
+imagine any except when people would start agents using this library,
+and I don't know whether that would be a good idea.
 
 			     MIB parsing
 
@@ -145,7 +156,6 @@ The current programming interface is very close to the level of SNMP
 operations and PDUs.  For actual management applications, there are
 probably more convenient interfaces that could be defined.
 
-At the very least, there should be an interface to traverse tables,
-but of course this will only become relevant once the getNext is
-implemented.  The implementation of the table-traversing interface
-should use getBulk on SNMPv2 sessions.
+At the very least, there should be an interface to traverse tables.
+The implementation of the table-traversing interface should use
+getBulk on SNMPv2 sessions.
