Use more canonic e-mail address for matter.

--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 	       Author: Simon Leinen  <simon@switch.ch>
 			    Contributors:
 		 Tobias Oetiker  <oetiker@ee.ethz.ch>
-	       Matthew Trunnell  <matter@dune.media.mit.edu>
+	       Matthew Trunnell  <matter@media.mit.edu>
 		 Andrzej Tobola  <san@iem.pw.edu.pl>
 		      Dave Rand  <dlr@Bungi.com>
 		   Heine Peters  <peters@dkrz.de>
