Give credit to Daniel L. Needles.

--- a/README
+++ b/README
@@ -10,6 +10,7 @@
 		   Heine Peters  <peters@dkrz.de>
 		      Yufang HU  <yhu@casc.com>
 	       Philippe Simonet  <sip00@vg.swissptt.ch>
+	      Daniel L. Needles  <dan_needles@INS.COM>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
