Added Niels Bakker to the credits.

--- a/README
+++ b/README
@@ -3,16 +3,17 @@
 
 	       Author: Simon Leinen  <simon@switch.ch>
 			    Contributors:
-		 Tobias Oetiker  <oetiker@ee.ethz.ch>
-	       Matthew Trunnell  <matter@media.mit.edu>
-		 Andrzej Tobola  <san@iem.pw.edu.pl>
-		      Dave Rand  <dlr@Bungi.com>
-		   Heine Peters  <peters@dkrz.de>
-		      Yufang HU  <yhu@casc.com>
-	       Philippe Simonet  <sip00@vg.swissptt.ch>
-	      Daniel L. Needles  <dan_needles@INS.COM>
-                        Dan Cox  <dcox@lexmark.com>
-               Iouri Pakhomenko  <pakhomenko@gmd.de>
+		 Tobias Oetiker	 <oetiker@ee.ethz.ch>
+	       Matthew Trunnell	 <matter@media.mit.edu>
+		 Andrzej Tobola	 <san@iem.pw.edu.pl>
+		      Dave Rand	 <dlr@Bungi.com>
+		   Heine Peters	 <peters@dkrz.de>
+		      Yufang HU	 <yhu@casc.com>
+	       Philippe Simonet	 <sip00@vg.swissptt.ch>
+	      Daniel L. Needles	 <dan_needles@INS.COM>
+			Dan Cox	 <dcox@lexmark.com>
+	       Iouri Pakhomenko	 <pakhomenko@gmd.de>
+		   Niels Bakker	 <niels@euro.net>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
