Added Mike Mitchell to the list of contributors.

--- a/README
+++ b/README
@@ -14,6 +14,7 @@
 			Dan Cox	 <dcox@lexmark.com>
 	       Iouri Pakhomenko	 <pakhomenko@gmd.de>
 		   Niels Bakker	 <niels@euro.net>
+		  Mike Mitchell  <mcm@unx.sas.com>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
